start css styling

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 
 <body>
+<div class="header">
+	<h1>Calculator by <a href="https://github.com/Jamesredux/jscalculator">jamesredux</a></h1>
+</div>
 
-<div class="screen"></div>
-<div id="shell">
-	
+<div id="calculator">
+	<div class="screen"></div>
 
-	<div class="button-group"></div>
+	<div id="button-group">
 	<button class="number-button" data=7>7</button>
 	<button class="number-button">8</button>
 	<button class="number-button">9</button>
@@ -29,20 +31,22 @@
 	<button class="number-button">2</button>
 	<button class="number-button">3</button>
 	<button class="operator-button">+</button>
+		<button class="negative-button">-/+</button>
+	
 	<button class="number-button">0</button>
 	
 	
 	<button class="decimal-button">.</button>
   
 	<button class="operator-button">-</button>
+	<button class="equals-button">=</button>
 
-	<button class="negative-button">-/+</button>
 	<button class="clear-button">AC</button>
 	
 	
-	<button class="equals-button">=</button>
+	
 </div>
-
+</div>
 
 
 
