add css and animations

--- a/index.html
+++ b/index.html
@@ -17,31 +17,31 @@
 	<div class="screen"></div>
 
 	<div id="button-group">
-	<button class="number-button" data=7>7</button>
-	<button class="number-button">8</button>
-	<button class="number-button">9</button>
-	<button class="operator-button">*</button>
+	<button data-key = "7" class="number-button key" >7</button>
+	<button data-key = "8" class="number-button key">8</button>
+	<button data-key = "9" class="number-button key">9</button>
+	<button data-key = "*" class="operator-button key">*</button>
 	
-	<button class="number-button">4</button>
-	<button class="number-button">5</button>
-	<button class="number-button">6</button>
-	<button class="operator-button">/</button>
+	<button data-key = "4" class="number-button key">4</button>
+	<button data-key = "5" class="number-button key">5</button>
+	<button data-key = "6" class="number-button key">6</button>
+	<button data-key = "/" class="operator-button key">/</button>
 
-	<button class="number-button">1</button>
-	<button class="number-button">2</button>
-	<button class="number-button">3</button>
-	<button class="operator-button">+</button>
-		<button class="negative-button">-/+</button>
+	<button data-key = "1" class="number-button key">1</button>
+	<button data-key = "2" class="number-button key">2</button>
+	<button data-key = "3" class="number-button key">3</button>
+	<button data-key = "+" class="operator-button key">+</button>
+		<button data-key = "-/+" class="negative-button key">-/+</button>
 	
-	<button class="number-button">0</button>
+	<button data-key = "0" class="number-button key">0</button>
 	
 	
-	<button class="decimal-button">.</button>
+	<button data-key = "." class="decimal-button key">.</button>
   
-	<button class="operator-button">-</button>
-	<button class="equals-button">=</button>
+	<button data-key = "-" class="operator-button key">-</button>
+	<button data-key = "=" class="equals-button key">=</button>
 
-	<button class="clear-button">AC</button>
+	<button data-key = "AC" class="clear-button key">AC</button>
 	
 	
 	
