refactor and style

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<div class="screen"></div>
 
 	<div id="button-group">
+
 	<button data-key = "7" class="number-button key" >7</button>
 	<button data-key = "8" class="number-button key">8</button>
 	<button data-key = "9" class="number-button key">9</button>
@@ -31,16 +32,13 @@
 	<button data-key = "2" class="number-button key">2</button>
 	<button data-key = "3" class="number-button key">3</button>
 	<button data-key = "+" class="operator-button key">+</button>
-		<button data-key = "-/+" class="negative-button key">-/+</button>
-	
-	<button data-key = "0" class="number-button key">0</button>
-	
-	
-	<button data-key = "." class="decimal-button key">.</button>
-  
-	<button data-key = "-" class="operator-button key">-</button>
-	<button data-key = "=" class="equals-button key">=</button>
 
+	<button data-key = "-/+" class="negative-button key">-/+</button>	
+	<button data-key = "0" class="number-button key">0</button>
+	<button data-key = "." class="decimal-button key">.</button>
+	<button data-key = "-" class="operator-button key">-</button>
+	
+	<button data-key = "=" class="equals-button key">=</button>
 	<button data-key = "AC" class="clear-button key">AC</button>
 	
 	
@@ -48,8 +46,9 @@
 </div>
 </div>
 
-
-
+<div class="footer">
+	<p>Created as part of the <a href="https://www.theodinproject.com/courses/web-development-101/lessons/calculator">Odin Project</a></p>
+</div>
 </body>
 
 </html>
